# agent-factory

./: .env.example  .env.template  .gitignore  .output.txt  .pre-commit-config.yaml  GOVERNANCE.md  Makefile  Procfile  README.md  audit_logger.py  company_info.txt  conftest.py  keepalive.ps1  memory_engine.py  monitor_cloudflared.ps1  monitor_services.ps1  package-lock.json  prometheus_optimization_layer_diagram  pyproject.toml  render.yaml  requirements.txt  root_directories.txt  setup_cloudflared_service.ps1  start-bridge-task.ps1  start-bridge.ps1  start-tunnel.ps1  test-bridge.txt  visual-diagram-roadmap.md  watchdog.ps1
.cloudflared/: config.yml
.junie/: guidelines.md
.well-known/: localhost_plugin.json
agents/: model_router.py
artifacts/: hitl_actions.jsonl
artisan_engine/: executor.py  policy.py
compliance/: compliance_kernel.py
config/: genesis_config.yaml  human_firewall.yaml  optimization_thresholds.json
core/: orion_bootstrap.py
data/: agent_factory.sqlite  ethical_baseline.json  ethical_baseline_v2.json
deploy/: deploy_factory.ps1
docs/: Archivist_Commercialization_Strategy.md  Archivist_Investor_Deck.md  Business_Archivist_Deployment_Guide.md  build_index.md  deployment_checklist.md  governance_ledger.md  knowledge_base_structure.md  operational_readiness_report.md  overview.md  phase1_validation_report.md  phase2_design_spec.md  phase2_validation_report.md  phase3_validation_report.md  phase4_validation_report.md  phase5_validation_report.md  phase6_validation_report.md  phase_9_3_observability.md  sdk_reference.md
logs/: audit.jsonl  (+27 more)
(+529 files in other folders)
