[tool.poetry]
name = "agent-factory"
version = "0.0.0"
description = "Agent Factory — health-check integration via Poetry entry point"
authors = ["Agent Factory Maintainers <maintainers@example.com>"]
readme = "README.md"
package-mode = true

# Limit packaging to known in-repo packages; this avoids pulling in unrelated dirs
packages = [
  { include = "scripts" },
  { include = "factory_agents" },
  { include = "services" },
  { include = "utils" },
  { include = "tools" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

[tool.poetry.scripts]
check-health = "scripts.check_health:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
